ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/BusinessCard__c.object-meta.xml
<CustomObject>
    <label>명함</label>
    <nameField>
        <displayFormat>BC-{0000000}</displayFormat>
        <label>BusinessCard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>명함</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>