ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>1차 릴리즈에서는 우편번호+도/시/도로명을 단일 필드에 verbatim 저장. 향후 5분해 가능.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>