ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Detected_Language__c.field-meta.xml
<CustomField>
    <fullName>Detected_Language__c</fullName>
    <label>Detected Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>