ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Extraction_Confidence_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Confidence_JSON__c</fullName>
    <description>필드별 LLM 신뢰도. JSON으로 저장 (e.g., {"company":1.0, "email":0.9}).</description>
    <label>Extraction Confidence JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>