ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Extraction_Warnings__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Warnings__c</fullName>
    <description>LLM이 반환한 누락/저신뢰도 알림 목록 (한국어).</description>
    <label>Extraction Warnings</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>