ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Status=Failed 일 때 디버깅용 에러 메시지/스택 일부.</description>
    <label>Failure Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>