ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>