ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>1차 릴리즈에서는 성+이름 통합본 (LLM이 verbatim으로 한 필드에 출력).</description>
    <label>Last Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>