ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 명함으로부터 생성된 Lead (역참조).</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Source Business Cards</relationshipLabel>
    <relationshipName>Business_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>