ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Lead_Source_Hint__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Hint__c</fullName>
    <description>명함 모서리에 인쇄된 전시회/이벤트 태그 등 (예: "Conference 2025"). Lead의 LeadSource 후보로 사용.</description>
    <label>Lead Source Hint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>