ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/LLM_Model_Used__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model_Used__c</fullName>
    <description>호출 시점에 활성이었던 모델명 (디버깅/비교용).</description>
    <label>LLM Model Used</label>
    <length>80</length>
    <type>Text</type>
</CustomField>