ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Processing_Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Duration_Ms__c</fullName>
    <description>LLM 호출 + Apex 처리 합계 시간 (ms).</description>
    <label>Processing Duration (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>