ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Raw_OCR_Text__c.field-meta.xml
<CustomField>
    <fullName>Raw_OCR_Text__c</fullName>
    <description>LLM이 명함에서 verbatim으로 읽은 전체 텍스트. 추적성 / 재매핑용.</description>
    <label>Raw OCR Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>