ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Extracting</fullName>
                <default>true</default>
                <label>Extracting</label>
            </value>
            <value>
                <fullName>Mapped</fullName>
            </value>
            <value>
                <fullName>LeadCreated</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>