ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Company__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>