ref/agentforce-sdo/force-app/main/default/objects/BusinessCard__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Company__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>내 명함</label>
</ListView>